simple landing page

--- a/app/views/landing.hbs
+++ b/app/views/landing.hbs
@@ -1,5 +1,16 @@
-<div class="row">
-  <div class="twelve columns">
-    <p>Hi there! Welcome to <code>node-boiler</code>. You can log in or register <a href="/login">here</a>.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="text-center"><code>// TODO</code></h1>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="col-xs-offset-4 col-xs-4">
+      <a href="https://github.com/login/oauth/authorize?client_id={{client_id}}&redirect_uri={{redirect_uri}}&scope={{scope}}&state={{state}}" class="btn btn-block btn-lg btn-social btn-github">
+          <i class="fa fa-github"></i> Sign in with Github
+        </a>
+    </div>
+  </div>
+
 </div>
