--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Node Boiler</title>
+  <title>//Todo</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -11,15 +11,16 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="/static/css/normalize.css">
-  <link rel="stylesheet" href="/static/css/skeleton.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.css">
+  <link rel="stylesheet" href="/static/css/bootstrap-social.css">
+  <link rel="stylesheet" href="/static/css/font-awesome.css">
 
   <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="twelve column" style="margin-top: 5%">
-        <h3>Node Boiler</h3>
+      <div class="col-xs-12" style="margin-top: 5%">
         {{#errorFlashes}}
           <p>Error: {{.}}</p>
         {{/errorFlashes}}
