--- a/app/views/login.hbs
+++ b/app/views/login.hbs
@@ -1,18 +1,3 @@
 <div class="row">
-  <div class="six columns">
-    <form action="/login" method="post">
-      <input type="text" name="username" placeholder="Username">
-      <input type="password" name="password" placeholder="Password">
-      <input type="submit" class="button-primary" value="Log in">
-    </form>
-  </div>
-  <div class="six columns">
-    <form action="/register" method="post">
-      <input type="text" name="username" placeholder="Username">
-      <input type="email" name="email" placeholder="Email">
-      <input type="password" name="password" placeholder="Password">
-      <input type="password" name="password2" placeholder="Password (repeat)">
-      <input type="submit" class="button-primary" value="Register">
-    </form>
-  </div>
+  <a href="auth/github">Log In With GH</a>
 </div>
