--- a/app/views/landing.hbs
+++ b/app/views/landing.hbs
@@ -12,5 +12,10 @@
         </a>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-offset-4 col-xs-4">
+      {{toJSON userRepos}}
+    </div>
+  </div>
 
 </div>
