--- a/app/views/landing.hbs
+++ b/app/views/landing.hbs
@@ -15,6 +15,9 @@
   <div class="row">
     <div class="col-xs-offset-4 col-xs-4">
       {{toJSON userRepos}}
+      <br>
+      <br>
+      {{toJSON authUser.profile}}
     </div>
   </div>
 
