--- a/app/views/landing.hbs
+++ b/app/views/landing.hbs
@@ -1,10 +1,15 @@
-<div class="container">
-  <div class="row mt centered">
-    <div class="col-xs-12">
-      <h1 class="text-center"><code>// TODO: Watch Some Repositories</code></h1>
+<div id="headerwrap">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 centered">
+        <h1><b>Settings</b> for TodoBot</h1>
+        <h2>Choose which repos he should help you with.</h2>
+      </div>
     </div>
   </div>
+</div>
 
+<div class="container">
   <div class="row mt centered">
     <div class="col-lg-6 col-lg-offset-3">
       <h1>Your Github Repos</h1>
