--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -43,7 +43,7 @@
       text-shadow: 0px 2px 2px rgba(0,0,0,0.15);
     }
 
-    i {
+    .btn-social i {
       margin: 0;
       color: white;
     }
