--- a/app/views/landing.hbs
+++ b/app/views/landing.hbs
@@ -61,7 +61,7 @@
           type: 'POST',
           url: '/api/addRepo/' + repo,
           success: function(data) {
-            console.log(data);
+            window.location.reload();
           },
           error: function(data) {
             console.log(data);
