--- a/app/views/landing.hbs
+++ b/app/views/landing.hbs
@@ -35,27 +35,54 @@
 
 </div>
 
+<div class="modal fade remove-modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        <h3 class="modal-title" style="color:#333">Are you sure?</h3>
+      </div>
+      <div class="modal-body">
+        <h4 style="color:#333"> This will remove TodoBot from <span class='fillInWithRepo'>placeholder?</span>.</h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-warning removeButton">Yes, remove TodoBot.</button>
+        <button type="button" class="btn btn-danger removeButton removeIssues">Yes, and remove all of TodoBot's issues too.</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <script type="text/javascript">
   $(document).ready(function(){
+    var $removeModal = $('.remove-modal');
+    $removeModal.modal({show: false});
+    $removeModal.find('.removeButton').on('click', function () {
+      var repo = $removeModal.data('targetRepo');
+      var removeComments = $(this).hasClass('removeIssues');
+      $.ajax({
+          type: 'POST',
+          url: '/api/removeRepo/' + repo,
+          data: {removeComments: removeComments},
+          success: function(data) {
+            window.location.reload();
+          },
+          error: function(data) {
+            console.log(data);
+          }
+        });
+    });
     $('.btn-repo').on('click', function() {
-      var repo = this.getAttribute('data-repo');
-      var action = this.getAttribute('data-action');
-      console.log(repo);
-      console.log(action);
+      var repo = $(this).data('repo');
+      var action = $(this).data('action');
+      console.log('got click!');
 
       if (action === 'remove') {
-        swal({
-          title: 'Are you sure?',
-          text: 'We will remove TodoBot as a collaborator from ' + repo + ' , but all issues will stay open.',
-          type: 'warning',
-          showCancelButton: true,
-          confirmButtonColor: '#DD6B55',
-          confirmButtonText: 'Yes, remove TodoBot',
-          closeOnConfirm: false ,
-          }, 
-          function(){
-            swal('Deleted!', 'Your imaginary file has been deleted.', 'success'); 
-          });
+        $removeModal.find('.fillInWithRepo').text(repo);
+        $removeModal.modal('show');
+        $removeModal.data('targetRepo', repo);
       } else if (action === 'add') {
         $.ajax({
           type: 'POST',
