--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/sweet-alert.min.js"></script>
 
