Big changes. Big changes.

--- a/app/views/register.hbs
+++ b/app/views/register.hbs
@@ -3,7 +3,7 @@
     <form method="post" class="col-sm-8 col-sm-offset-2">
       Email: <input type="text" name="username"><br>
       Password: <input type="password" maxlength="18" name="password"><br>
-      <input type="submit" value="Log In">
+      <input type="submit" value="Register">
     </form>
   </div>
 </div>
