--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -3,6 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>// TodoBot</title>
+  <!-- Favicon stuff -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/static/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/static/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/static/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/static/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/static/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/static/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/static/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/static/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/static/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -19,7 +38,7 @@
   <link rel="stylesheet" href="/static/css/theme.css">
 
   <!-- Sweet Alert -->
-  <link rel="stylesheet" href="/static/css/sweet-alert.css">  
+  <link rel="stylesheet" href="/static/css/sweet-alert.css">
 
   <style type="text/css">
     .header-img {
@@ -29,7 +48,7 @@
     }
 
     #headerwrap {
-      padding-top: 100px;
+      padding-top: 0;
       min-height: initial;
       padding-bottom: 50px;
     }
@@ -64,9 +83,12 @@
     .navbar-fixed-top {
       z-index: 1;
     }
-  </style>
 
-  <link rel="icon" type="image/png" href="images/favicon.png" />
+    .content div.container:nth-of-type(1)  {
+      padding-top: 100px;
+    }
+
+  </style>
 </head>
 <body>
   <!-- Fixed navbar -->
@@ -82,7 +104,9 @@
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/sweet-alert.min.js"></script>
 
-  {{{body}}}
+  <div class="content">
+    {{{body}}}
+  </div>
 
   <div class="container">
     <hr>
