--- a/app/views/error.hbs
+++ b/app/views/error.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Node Boiler - Error</title>
+  <title>Todobot - Error</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -11,17 +11,17 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="/static/css/normalize.css">
-  <link rel="stylesheet" href="/static/css/skeleton.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="twelve column" style="margin-top: 5%">
-        <h3>Node Boiler - Error</h3>
+      <div class="col-sm-12" style="margin-top: 5%">
+        <h2>TodoBot - Error</h2>
       </div>
     </div>
     <div class="row">
-      <div class="twelve columns">
+      <div class="col-sm-12">
         <h3>{{ error.message }} (status {{ error.status }})</h3>
         <pre>{{ error.stack }}</pre>
       </div>
