--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -1,34 +1,34 @@
 <div id="headerwrap">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8">
-				<h1><b>Meet</b> TodoBot 2.0</h1>
-				<h2>He keeps track of the cruft in your code and tracks it using any system you like.</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h1><b>Meet</b> TodoBot 2.0</h1>
+        <h2>He keeps track of the cruft in your code and tracks it using any system you like.</h2>
 
-				<div class="header-btn">
-					<a href="auth/github" class="btn btn-lg btn-social btn-github">
-						<i class="fa fa-github"></i>Get TodoBot
-					</a>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="header-img">
-					<img class="img-responsive" src="/static/img/robotocat.png" alt="">
-				</div>
-			</div>
+        <div class="header-btn">
+          <a href="/register" class="btn btn-lg btn-get-started">
+            {{!-- <i class="fa fa-laptop"></i> --}}Get TodoBot
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="header-img">
+          <img class="img-responsive" src="/static/img/robotocat.png" alt="">
+        </div>
+      </div>
 
-		</div>
-	</div>
+    </div>
+  </div>
 </div>
 
 <div class="container">
-	<div class="row mt centered">
-		<div class="col-lg-6">
-			<h1><b>Todos and More</b><br/> Now Managed Magically</h1>
+  <div class="row mt centered">
+    <div class="col-lg-6">
+      <h1><b>Todos and More</b><br/> Now Managed Magically</h1>
       <div style="text-align: left;">
-  			<h3>TodoBot parses through your code - wherever it's hosted - and automatically recognizes TODO comments (or any other cruft). Once it sees you removed a nasty bit from the code, it knows to close the issue.</h3>
+        <h3>TodoBot parses through your code - wherever it's hosted - and automatically recognizes TODO comments (or any other cruft). Once it sees you removed a nasty bit from the code, it knows to close the issue.</h3>
       </div>
-		</div>
+    </div>
     <div class="col-lg-6">
       <h1><b>Fully extensible</b><br/> Track Anything, Anywhere</h1>
       <div style="text-align: left;">
