--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -2,18 +2,25 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h1><b>Meet</b> TodoBot 2.0</h1>
-        <h2>He keeps track of the cruft in your code and tracks it using any system you like.</h2>
+        <h1>Meet <b>Sentry</b></h1>
+        <h2>Wherever your code is hosted, <b>Sentry</b> is ever vigilant. He'll tirelessly watch your source to help you track down bad practices.</h2>
 
         <div class="header-btn">
-          <a href="/register" class="btn btn-lg btn-get-started">
-            {{!-- <i class="fa fa-laptop"></i> --}}Get TodoBot
+        {{#if user}}
+          <a href="/dashboard" class="btn btn-lg btn-get-started">
+            Dashboard
           </a>
+        {{else}}
+          <a href="/register" class="btn btn-lg btn-get-started">
+            Get Sentry
+          </a>
+        {{/if}}
+
         </div>
       </div>
       <div class="col-md-4">
         <div class="header-img">
-          <img class="img-responsive" src="/static/img/robotocat.png" alt="">
+          <img class="img-responsive" src="/static/img/british_sentry_markmurphycreative.png" alt="Sentry at his post">
         </div>
       </div>
 
@@ -24,17 +31,16 @@
 <div class="container">
   <div class="row mt centered">
     <div class="col-lg-6">
-      <h1><b>Todos and More</b><br/> Now Managed Magically</h1>
+      <h1><b>Fully Extensible</b><br/>With Customisable Services</h1>
       <div style="text-align: left;">
-        <h3>TodoBot parses through your code - wherever it's hosted - and automatically recognizes TODO comments (or any other cruft). Once it sees you removed a nasty bit from the code, it knows to close the issue.</h3>
+        <h3>Sentry watches your code for changes and passes them along to <b>services</b>. Services can be configured for one repo or all repos, giving you fine-grained control over how they're applied. You can also add <a href="/coming-soon">custom services</a> for any use case.</h3>
       </div>
     </div>
     <div class="col-lg-6">
-      <h1><b>Fully extensible</b><br/> Track Anything, Anywhere</h1>
+      <h1><b>Use Any Git Source</b><br/>Track Anything, Anywhere</h1>
       <div style="text-align: left;">
         <h3>
-          With source provider plugins, you can add TodoBot to any hosting service you like.
-          And service plugins let you hook up custom handlers, so you can track any form of cruft, any way you can think of.
+          Sentry can pull code from many different sources using <b>source providers</b>. Github works right out of the box! If there's not a source provider for your host of choice, <a href="/coming-soon">it's easy to write your own</a>.
         </h3>
       </div>
     </div>
