Add templates for services that reflect the real state of the world

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h1>Meet <b>Sentry</b></h1>
-        <h2>Wherever your code is hosted, <b>Sentry</b> is ever vigilant. He'll tirelessly watch your source to help you track down bad practices.</h2>
+        <h1>Meet <b>Sentry.</b></h1>
+        <h2>Wherever your code is hosted, <b>Sentry</b> is ever vigilant.<br>He'll tirelessly watch your source to help you track down bad practices.</h2>
 
         <div class="header-btn">
         {{#if user}}
