remove TODOBOT references

--- a/app/views/error.hbs
+++ b/app/views/error.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Todobot - Error</title>
+  <title>Sentry - Error</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12" style="margin-top: 5%">
-        <h2>TodoBot - Error</h2>
+        <h2>Sentry - Error</h2>
       </div>
     </div>
     <div class="row">
