Write a bunch of marionette code; still need to see if it works

--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -165,6 +165,9 @@
   <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/sweet-alert.min.js"></script>
+  <script src="/static/js/lodash.min.js"></script>
+  <script src="/static/js/backbone.min.js"></script>
+  <script src="/static/js/marionette.min.js"></script>
 
   <div class="content">
     {{#if hasFlashes}}
