--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -1,3 +1,10 @@
+{{#section 'styles'}}
+<link rel="stylesheet" href="/static/css/font-awesome.min.css">
+<!-- Sweet Alert -->
+<link rel="stylesheet" href="/static/css/sweet-alert.css">
+<link rel="stylesheet" href="/static/css/dashboard.css">
+{{/section}}
+
 {{> dashboard-templates }}
 <div class="container">
   <div class="row">
@@ -6,7 +13,19 @@
   </div>
   <div class="row">
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="text-center">
+      <span class="fa fa-cog fa-spin fa-5x"></span>
+      <br/>
+      <span class="fa fa-5x">Loading repos...</span>
+    </div>
   </div>
   </div>
 </div>
+
+{{#section 'scripts'}}
+<script src="/static/js/sweet-alert.min.js"></script>
+<script src="/static/js/lodash.min.js"></script>
+<script src="/static/js/backbone.min.js"></script>
+<script src="/static/js/marionette.min.js"></script>
 <script src="/static/js/dashboard.js"></script>
+{{/section}}
