--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -32,13 +32,9 @@
   <link rel="stylesheet" href="/static/css/normalize.css">
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/bootstrap-social.css">
-  <link rel="stylesheet" href="/static/css/font-awesome.min.css">
 
   <!-- Theme CSS -->
   <link rel="stylesheet" href="/static/css/theme.css">
-
-  <!-- Sweet Alert -->
-  <link rel="stylesheet" href="/static/css/sweet-alert.css">
 
   <style type="text/css">
     .header-img {
@@ -142,6 +138,9 @@
     }
 
   </style>
+
+  {{renderSection 'styles'}}
+
 </head>
 <body>
   <!-- Fixed navbar -->
@@ -162,26 +161,19 @@
     </div>
   </div>
 
-  <script src="/static/js/jquery.min.js"></script>
-  <script src="/static/js/bootstrap.min.js"></script>
-  <script src="/static/js/sweet-alert.min.js"></script>
-  <script src="/static/js/lodash.min.js"></script>
-  <script src="/static/js/backbone.min.js"></script>
-  <script src="/static/js/marionette.min.js"></script>
-
   <div class="content">
-    {{#if hasFlashes}}
       <div id="alerts" class="container {{#if isIndex}}alerts-index{{/if}}">
       <div class="row">
-      {{#each errorFlashes}}
-        <div class="col-sm-12 alert alert-danger alert-dismissable">{{this}}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-      {{/each}}
-      {{#each successFlashes}}
-        <div class="col-sm-12 alert alert-success alert-dismissable">{{this}}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-      {{/each}}
+      {{#if hasFlashes}}
+        {{#each errorFlashes}}
+          <div class="col-sm-12 alert alert-danger alert-dismissable">{{this}}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+        {{/each}}
+        {{#each successFlashes}}
+          <div class="col-sm-12 alert alert-success alert-dismissable">{{this}}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+        {{/each}}
+      {{/if}}
       </div>
       </div>
-    {{/if}}
     {{{body}}}
   </div>
 
@@ -193,8 +185,12 @@
         Image by <a href="http://www.markmurphycreative.co.uk/">Mark Murphy Creative</a>
       {{/if}}
     </p>
-    {{!-- <p class="centered"></p> --}}
   </footer>
+
+  <script src="/static/js/jquery.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+
+  {{renderSection 'scripts'}}
 
 </body>
 </html>
