Add in repo icons

--- a/app/views/partials/dashboard-templates.hbs
+++ b/app/views/partials/dashboard-templates.hbs
@@ -65,9 +65,9 @@
 </script>
 
 <script type="text/template" id="service-template-active">
-  <a href="javascript:void(0)" class="btn btn-default btn-primary deactivate-service">Dectivate <%= DISPLAY_NAME %></a>
+  <a href="javascript:void(0)" class="btn btn-default btn-primary deactivate-service"><img class="service-icon" src="/plugins/services/<%= NAME %>/icon"/>Dectivate <%= DISPLAY_NAME %></a>
 </script>
 
 <script type="text/template" id="service-template-inactive">
-  <a href="javascript:void(0)" class="btn btn-default btn-primary activate-service">Activate <%= DISPLAY_NAME %></a>
+  <a href="javascript:void(0)" class="btn btn-default btn-primary activate-service"><img class="service-icon" src="/plugins/services/<%= NAME %>/icon"/>Activate <%= DISPLAY_NAME %></a>
 </script>
