Re-add configuration

--- a/app/views/partials/dashboard-templates.hbs
+++ b/app/views/partials/dashboard-templates.hbs
@@ -42,6 +42,7 @@
       <a href="javascript:void(0)">
         <span class="label label-default deactivate-repo"><span class="fa fa-warning"></span>&nbsp;&nbsp;Deactivate</span>
       </a>
+      &nbsp;<a class="configure" href="/configureRepo/<%= encodeURIComponent(sourceProviderName) %>/<%= encodeURIComponent(id) %>">Configure</a>
     </div>
   </div>
   <!-- maybe a row goes here -->
