--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -40,7 +40,7 @@
       <h1><b>Use Any Git Source</b><br/>Track Anything, Anywhere</h1>
       <div style="text-align: left;">
         <h3>
-          Sentry can pull code from many different sources using <b>source providers</b>. Github works right out of the box! If there's not a source provider for your host of choice, <a href="/coming-soon">it's easy to write your own</a>.
+          Sentry can pull code from many different sources using <b>sources</b>. Github works right out of the box! If there's not a source for your host of choice, <a href="/coming-soon">it's easy to write your own</a>.
         </h3>
       </div>
     </div>
