--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-8">
         <h1>Meet <b>Sentry.</b></h1>
-        <h2>Wherever your code is hosted, <b>Sentry</b> is ever vigilant.<br>He'll tirelessly watch your source to help you track down bad practices.</h2>
+        <h2>Wherever your code is hosted, <b>Sentry</b> is ever vigilant.</h2><h2>He'll tirelessly watch your source to help you track down bad practices.</h2>
 
         <div class="header-btn">
         {{#if user}}
@@ -33,7 +33,7 @@
     <div class="col-lg-6">
       <h1><b>Fully Extensible</b><br/>With Customisable Services</h1>
       <div style="text-align: left;">
-        <h3>Sentry watches your code for changes and passes them along to <b>services</b>. Services can be configured for one repo or all repos, giving you fine-grained control over how they're applied. You can also add <a href="/coming-soon">custom services</a> for any use case.</h3>
+        <h3>Sentry watches your code for changes and passes them along to <b>services</b>, which can be configured for fine-grained control over how they're applied. You can also add <a href="/coming-soon">custom services</a> for any use case.</h3>
       </div>
     </div>
     <div class="col-lg-6">
